aligned submit button correctly

--- a/src/components/ClientTimesheetForm/ClientTimesheetForm.scss
+++ b/src/components/ClientTimesheetForm/ClientTimesheetForm.scss
@@ -7,4 +7,6 @@
     width: 95%;
     border: 3px solid $whiteColor;
     font-size: 30px;
+    bottom: 5px;
+    height: 60px;
 }
